Fix spacing issues

--- a/pages/components/ShowcaseItem/showcaseitem.module.css
+++ b/pages/components/ShowcaseItem/showcaseitem.module.css
@@ -6,6 +6,7 @@
     border-radius: var(--small-pad);
     max-height: var(--medium-width);    
     height: fit-content;
+    overflow: hidden;
     
 }
 
